// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared Components|Table Default 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            US
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            —
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with header 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <thead
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <th
            className="sc-chPdSV bHedkg"
          >
            Code
          </th>
          <th
            className="sc-chPdSV bHedkg"
          >
            Capital
          </th>
          <th
            className="sc-chPdSV bHedkg"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            US
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kAzzGY hMfDjf"
          >
            —
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;

exports[`Storyshots Shared Components|Table with numbered rows 1`] = `
<div
  style={
    Object {
      "backgroundColor": "#000",
      "minHeight": "100vh",
    }
  }
>
  <div
    className="sc-VigVT imEBlk"
  >
    <table
      className="sc-jTzLTM UCMMg"
    >
      <thead
        className="sc-fjdhpX nsimD"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <th
            className="sc-chPdSV bHedkg"
          >
            #
          </th>
          <th
            className="sc-chPdSV bHedkg"
          >
            Code
          </th>
          <th
            className="sc-chPdSV bHedkg"
          >
            Capital
          </th>
          <th
            className="sc-chPdSV bHedkg"
          >
            Country
          </th>
        </tr>
      </thead>
      <tbody
        className="sc-jzJRlG enxKql"
      >
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf bvDsC"
          >
            1
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            US
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Washington, D.C.
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            USA
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf bvDsC"
          >
            2
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            PL
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Warsaw
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Poland
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf bvDsC"
          >
            3
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            DE
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Berlin
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Germany
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf bvDsC"
          >
            4
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            FR
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Paris
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            France
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf bvDsC"
          >
            5
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            ES
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Madird
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Spain
          </td>
        </tr>
        <tr
          className="sc-cSHVUG iDabFA"
        >
          <td
            className="sc-kgoBCf bvDsC"
          >
            6
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            —
          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
          <td
            className="sc-kAzzGY hMfDjf"
          >
            Sed eu dictum orci. In hac habitasse platea dictumst.
  Donec vestibulum scelerisque est sit amet mattis. Duis ac magna
  elementum felis semper dapibus nec id ligula. Nullam vehicula urna
  ac arcu scelerisque tincidunt. Vestibulum ante ipsum primis in
  faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque
  aliquet, nulla et tincidunt porttitor, eros risus pellentesque lorem,
  in elementum dui magna ac sem. Nulla facilisi. In hac habitasse platea
  dictumst. Sed eu dictum orci. In hac habitasse platea dictumst.

          </td>
        </tr>
      </tbody>
    </table>
  </div>
</div>
`;
